# music_video_pipeline

./: .gitignore  AGENTS.md  README.md  pyproject.toml
configs/: base_model_registry.json  default.json  jieranduhuo.json  jieranduhuo_adaptive.json  lora_bindings.json  module_b_llm_siliconflow.json  module_c_real_default.json
configs/comfyui/: module_c_end.contract.json  module_c_start.contract.json  module_d.contract.json
configs/music_wsl/: default.json  jieranduhuo_v2.json  juebieshu_v2.json  tots_v2.json  (+1 more)
docs/: 5分钟跑通指南.md  B→C 歌词透传与占位图展示改造计划.md  ModuleA Whisper 语言配置改造计划.md  导师汇报稿_程序思路.md  日语歌词对齐与噪声清洗修复.md  模块C占位图中文与字号修复方案.md  模块D参数手册.md  状态恢复说明.md
scripts/: check_bypy_whitelist_vs_remote.py  comf  comfyui_daemon.py  gpu_probe.py
tests/: test_cli_commands.py  test_cli_commands_b.py  test_cli_commands_bcd.py  test_cli_commands_d.py  test_cli_monitor_launch.py  test_command_service.py  test_config.py  test_contracts.py  test_cross_module_bcd_parallel.py  test_diffusers_runtime.py  test_frame_generator.py  test_gpu_probe_script.py  test_interactive_cli.py  test_model_assets_download_flow.py  test_model_assets_sync_base_model.py  test_model_assets_task_sync.py  test_module_a_algorithm.py  test_module_a_v2_algorithm_path.py  test_module_a_v2_allin1_backend.py  test_module_a_v2_content_roles.py  test_module_a_v2_contracts.py  test_module_a_v2_smoke.py  test_module_b_enrichment.py  test_module_b_llm_generator.py  test_module_b_llm_parser.py  test_module_b_unit_retry_parallel.py  test_module_b_v2_new_contracts.py  test_module_c_unit_retry_parallel.py  test_module_d_animatediff_renderer.py  test_module_d_comfyui_renderer.py  test_module_d_timing.py  test_module_d_unit_retry_parallel.py  test_monitor_server.py  test_monitor_snapshot.py  test_pipeline_bcd_cli.py  test_pipeline_bypy_upload.py  test_pipeline_cross_resume.py  test_pipeline_module_b_cli.py  test_pipeline_module_c_cli.py  test_pipeline_module_d_cli.py  (+4 more)
(+150 files in other folders)
