[build-system]
requires = ["hatchling>=1.26.0"]
build-backend = "hatchling.build"

[project]
name = "music-video-pipeline"
version = "0.1.0"
description = "基于音频结构驱动的多模态音画同步流水线"
readme = "docs/5分钟跑通指南.md"
requires-python = ">=3.11, <3.12"
dependencies = [
  "Pillow>=10.0.0",
  "mutagen>=1.47.0",
  "numpy>=1.26.0",
  "opencv-python-headless>=4.10.0",
  "huggingface_hub>=0.24.0",
  "requests>=2.31.0",
  "librosa>=0.10.2",
  "websockets>=11.0,<12.0",
  "torch==2.5.0",
  "torchaudio==2.5.0",
  "demucs>=4.0.1",
  "funasr",
  "transformers>=4.40.0",
  "natten",
  "madmom",
  "all-in-one-fix==2.0.4",
  "setuptools<81",
  "bypy>=1.8.9",
  "diffusers",
  "tiktoken>=0.12.0",
  "accelerate==1.13.0",
  "iniconfig==2.3.0",
  "peft==0.19.1",
  "pip==26.0.1",
  "pluggy==1.6.0",
  "psutil==7.2.2",
  "pytest==9.0.3",
]

[project.scripts]
music-video-pipeline = "music_video_pipeline.cli:main"
mvpl = "music_video_pipeline.cli:main"
model_assets = "music_video_pipeline.model_assets_cli:main"
eval = "music_video_pipeline.eval_cli:main"

[tool.uv]
override-dependencies = [
  "natten @ https://github.com/SHI-Labs/NATTEN/releases/download/v0.17.5/natten-0.17.5%2Btorch250cu121-cp311-cp311-linux_x86_64.whl"
]

[[tool.uv.index]]
name = "pytorch-cu121"
url = "https://download.pytorch.org/whl/cu121"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu121" }
torchaudio = { index = "pytorch-cu121" }
natten = { url = "https://github.com/SHI-Labs/NATTEN/releases/download/v0.17.5/natten-0.17.5%2Btorch250cu121-cp311-cp311-linux_x86_64.whl" }
madmom = { git = "https://github.com/CPJKU//madmom.git", rev = "27f032e" }
funasr = { git = "https://github.com/modelscope/FunASR.git", rev = "b842ff8107e1da950947ada0d11ae3c008baeb54" }

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"
markers = [
  "smoke: 需要本地可用 ffmpeg 的冒烟测试"
]
